<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.steven.myapplication.PlantSpecification"
    android:background="@color/light_cream">


    <TextView
        android:id="@+id/plantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginTop="8dp"
        android:text="default"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/dark_green_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,UnknownId" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="357dp"
        android:layout_height="260dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editText"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/dark_green_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/plantTitle"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/speciesname"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editText"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="328dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Species_name"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextViewEdits,UnknownId" />

    <TextView
        android:id="@+id/location"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Location"
        app:layout_constraintTop_toBottomOf="@+id/speciesname" />

    <TextView
        android:id="@+id/flowercolor"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editText3"
        android:layout_toEndOf="@+id/guideline"
        android:layout_toRightOf="@+id/guideline"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Flower_Color"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:ignore="TextViewEdits,UnknownId" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_above="@+id/flowercolor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Origin"
        app:layout_constraintTop_toBottomOf="@+id/flowercolor"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/bloomseason"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        app:layout_constraintBottom_toTopOf="@+id/drought"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Bloomseason"
        app:layout_constraintTop_toBottomOf="@+id/origin" />

    <TextView
        android:id="@+id/drought"
        android:layout_width="231dp"
        android:layout_height="31dp"
        android:layout_above="@+id/textView3"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="476dp"
        android:layout_toEndOf="@+id/guideline"
        android:layout_toRightOf="@+id/guideline"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/droughttolerance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="TextViewEdits,UnknownId" />

    <TextView
        android:id="@+id/plantHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        app:layout_constraintStart_toStartOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/height"/>

    <TextView
        android:id="@+id/plantWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/dark_green_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/width"
        app:layout_constraintTop_toBottomOf="@+id/width" />


    <TextView
        android:id="@+id/Species_name"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="328dp"
        android:text="@string/species_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintEnd_toStartOf="@+id/speciesname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Species_name" />

    <TextView
        android:id="@+id/Flower_Color"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:text="@string/flower_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location" />

    <TextView
        android:id="@+id/Origin"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:text="@string/origin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Flower_Color" />

    <TextView
        android:id="@+id/Bloomseason"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:text="@string/bloomseason"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Origin" />

    <TextView
        android:id="@+id/droughttolerance"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:text="@string/drought_tolerance"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bloomseason"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="8dp"
        android:text="@string/height"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/width"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="144dp"
        android:layout_marginStart="8dp"
        android:text="@string/width"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/green_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/height"
        app:layout_constraintTop_toTopOf="@+id/height" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>