<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green_text"
    tools:context="com.example.steven.myapplication.PlantSpecification">


    <TextView
        android:id="@+id/plantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginTop="8dp"
        android:text="default"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,UnknownId"
        android:textColor="@color/light_cream" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="351dp"
        android:layout_height="260dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="8dp"
        android:textColor="@color/light_cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/plantTitle"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/speciesname"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editText"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Species_name"
        tools:ignore="TextViewEdits,UnknownId"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/flowercolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Location"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/flowercolor"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editText3"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/guideline"
        android:layout_toRightOf="@+id/guideline"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toTopOf="@+id/origin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Flower_Color"
        tools:ignore="TextViewEdits,UnknownId"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/origin"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_above="@+id/flowercolor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toTopOf="@+id/bloomseason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Origin"
        tools:ignore="TextViewEdits"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/bloomseason"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toTopOf="@+id/drought"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Bloomseason"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/drought"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_above="@+id/textView3"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/guideline"
        android:layout_toRightOf="@+id/guideline"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/droughttolerance"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextViewEdits,UnknownId"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/plantHeight"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_above="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plantWidth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/height"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="TextViewEdits,UnknownId"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/plantWidth"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plantHeight"
        app:layout_constraintTop_toBottomOf="@+id/width"
        app:layout_constraintVertical_bias="0.272"
        android:textColor="@color/light_cream"/>


    <TextView
        android:id="@+id/Species_name"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="328dp"
        android:text="@string/species_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/Location"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Species_name"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/Flower_Color"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/flower_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/Origin"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:text="@string/origin"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Flower_Color"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/Bloomseason"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/bloomseason"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Origin"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/droughttolerance"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/drought_tolerance"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bloomseason"
        app:layout_constraintVertical_bias="0.0"
        android:textColor="@color/light_cream"/>


    <TextView
        android:id="@+id/height"
        android:layout_width="170dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/height"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/droughttolerance"
        android:textColor="@color/light_cream"/>

    <TextView
        android:id="@+id/width"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/width"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drought"
        android:textColor="@color/light_cream"/>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="384dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>